# drift-dataset

./: .gitignore  README.md  main.py  pyproject.toml
src/drift_dataset/: __init__.py  cli.py  config.py  dataset.py  flow.py  paths.py  rendering.py  types.py  visualization.py  visualize_cli.py  visualize_flow_cli.py
tests/: test_dataset.py  test_visualization.py
