[project]
name = "drift-dataset"
version = "0.1.0"
description = "Synthetic moving-circle image sequence dataset generator."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "imageio>=2.37.0",
    "imageio-ffmpeg>=0.6.0",
    "numpy>=2.2.0",
    "tqdm>=4.67.0",
]

[project.scripts]
drift-dataset = "drift_dataset.cli:main"
drift-visualize = "drift_dataset.visualize_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/drift_dataset"]
